<resources>
	<string name="app_name">Jogo da Velha</string>

	<string name="login">Login</string>
	<string name="senha">Senha</string>
	<string name="logar">Logar</string>
	<string name="cadastrar">Cadastrar</string>
	<string name="nome">Nome</string>
	<string name="numeroDePartidas">Número de partidas</string>

	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
</resources>
