<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  tools:context=".MainActivity"
			  android:orientation="vertical">

	<TextView
			android:text="@string/login"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

	<EditText
			android:id="@+id/login"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

	<TextView
			android:text="@string/senha"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

	<EditText
			android:id="@+id/senha"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword"/>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				  xmlns:tools="http://schemas.android.com/tools"
				  android:layout_width="match_parent"
				  android:layout_height="match_parent"
				  tools:context=".MainActivity"
				  android:orientation="horizontal">

		<Button
				android:id="@+id/btnLogar"
				android:text="@string/logar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

		<Button
				android:id="@+id/btnCadastrar"
				android:text="@string/cadastrar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
	</LinearLayout>

</LinearLayout>
